fixed: keep visible feed container on mobile display

--- a/src/styles/feed.scss
+++ b/src/styles/feed.scss
@@ -183,6 +183,9 @@
 
 @media only screen and (max-width:641px) {
     .aqi-feed__container {
+        opacity: 1;
+        max-height: 9999px;
+
         &.active {
             transition: unset;
         }
